--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
     "build-storybook": "build-storybook -s public"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
-    "babel-runtime": "^6.26.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-flowtype": "^2.49.3",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1"
+    "eslint-plugin-react": "^7.9.1",
+    "prettier-eslint": "^8.8.1"
   }
 }
