--- a/.eslintrc
+++ b/.eslintrc
@@ -11,5 +11,14 @@
     "es6": true,
     "browser": true,
     "jest": true
+  },
+  "rules": {
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": ["Link"],
+        "specialLink": ["to"]
+      }
+    ]
   }
 }
