--- a/server/.graphqlconfig.yml
+++ b/server/.graphqlconfig.yml
@@ -1,11 +1,13 @@
 projects:
   app:
     schemPath: src/schema.graphql
+    includes: ["**/*.graphql"]
     extensions:
       endpoints:
         default: http://localhost:4000
   database:
     schemaPath: src/generated/prisma.graphql
+    includes: ["**/*.graphql"]
     extensions:
       prisma: database/prisma.yml
    
