--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "dev": "npm-run-all --parallel start playground"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "graphql-yoga": "^1.14.8",
+    "jsonwebtoken": "^8.3.0",
     "prisma-binding": "^2.1.0"
   },
   "devDependencies": {
