--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "serve": "^9.1.0",
     "styled-components": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "now-start": "serve -s ./build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
